--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,18 +1,18 @@
 # The server protocol and host
-server_protocol: "http"
-server_url: "openstreetmap.example.com"
+server_protocol: "https"
+server_url: "myplanet.geofictician.net"
 # Publisher
 #publisher_url: ""
 # The generator
-generator: "OpenStreetMap server"
-copyright_owner: "OpenStreetMap and contributors"
-attribution_url: "http://www.openstreetmap.org/copyright"
-license_url: "http://opendatacommons.org/licenses/odbl/1-0/"
+generator: "geofictician (OSM fork) server"
+copyright_owner: "myplanet geofictician and contributors"
+attribution_url: "https://myplanet.geofictician.net/copyright"
+license_url: "https://opendatacommons.org/licenses/odbl/1-0/"
 # Support email address
-support_email: "openstreetmap@example.com"
+support_email: "mapadmin@myplanet.geofictician.net"
 # Sender addresses for emails
-email_from: "OpenStreetMap <openstreetmap@example.com>"
-email_return_path: "openstreetmap@example.com"
+email_from: "myplanet geofictician <mapadmin@myplanet.geofictician.net>"
+email_return_path: "mapadmin@myplanet.geofictician.net"
 # API version
 api_version: "0.6"
 # Application status - possible values are:
@@ -99,7 +99,7 @@ basic_auth_support: true
 oauth_10_support: true
 oauth_10_registration: true
 # URL of Nominatim instance to use for geocoding
-nominatim_url: "https://nominatim.openstreetmap.org/"
+nominatim_url: "https://myplanetnominatim.geofictician.net/"
 # Default editor
 default_editor: "id"
 # OAuth application for the web site
@@ -109,11 +109,11 @@ default_editor: "id"
 # Imagery to return in capabilities as blacklisted
 imagery_blacklist: []
 # URL of Overpass instance to use for feature queries
-overpass_url: "https://overpass-api.de/api/interpreter"
+overpass_url: "https://myplanetoverpass.geofictician.net/api/interpreter"
 overpass_credentials: false
 # Routing endpoints
-graphhopper_url: "https://graphhopper.com/api/1/route"
-fossgis_osrm_url: "https://routing.openstreetmap.de/"
+graphhopper_url: "https://myplanetgraphhopper,geofictician.net/api/1/route"
+fossgis_osrm_url: "https://myplanetrouting.geofictician.net/"
 fossgis_valhalla_url: "https://valhalla1.openstreetmap.de/route"
 # External authentication credentials
 #google_auth_id: ""
