--- a/config/example.database.yml
+++ b/config/example.database.yml
@@ -3,10 +3,10 @@
 #
 development:
   adapter: postgresql
-  database: openstreetmap
-#  username: openstreetmap
-#  password: openstreetmap
-#  host: localhost
+  database: myplanetdevapi
+  username: myplanetdbuser
+  password: <topsecret>
+  host: localhost
   encoding: utf8
 
 # Warning: The database defined as 'test' will be erased and
@@ -14,16 +14,16 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: osm_test
-#  username: osm_test
-#  password: osm_test
-#  host: localhost
+  database: myplanettestapi
+  username: myplanetdbuser
+  password: <topsecret>
+  host: localhost
   encoding: utf8
 
 production:
   adapter: postgresql
-  database: osm
-#  username: osm
-#  password: osm
-#  host: localhost
+  database: myplanetprodapi
+  username: myplanetdbuser
+  password: <topsecret>
+  host: localhost
   encoding: utf8
